@@ -1,0 +1,4 @@
+id,name,type
+-------------------------------
+3,NONE,AIR
+3,TEST SPECIAL CHARS,RA:*?><I/L#%S
