@@ -1,0 +1,3 @@
+id,name,type
+-------------------------------
+3,TEST SPECIAL CHARS,RA:*?><I/L#%S
